--- a/package.json
+++ b/package.json
@@ -4,20 +4,48 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "emmail": "email dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-beta.4",
+    "@clerk/nextjs": "^6.12.5",
+    "@google/generative-ai": "^0.24.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@prisma/client": "^6.5.0",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@react-email/components": "^0.0.34",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "inngest": "^3.32.8",
+    "lucide-react": "^0.482.0",
+    "next": "15.2.3",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.2",
     "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "react-spinners": "^0.15.0",
+    "recharts": "^2.15.1",
+    "resend": "^4.1.2",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.14",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "prisma": "^6.5.0",
+    "tailwindcss": "^3.4.17"
   }
 }
